--- a/src/components/List/style.css
+++ b/src/components/List/style.css
@@ -12,6 +12,7 @@
     height: 5.4rem;
     border-radius: 8px;
     background-color: #F8F9FA;
+    font-family: 'Inter';
 }
 
 .input-list:hover{
@@ -35,7 +36,7 @@
     font-size: 1rem;
     font-weight: 700;
     color: #212529;
-    font-family: 'Nunito';
+    font-family: 'Nunito Sans', sans-serif;
     padding-left: 1rem;
     padding-top: 1rem;
 }
@@ -44,7 +45,7 @@
     font-size: 1rem;
     font-weight: 400;
     color: #343A40;
-    font-family: 'Nunito';
+    font-family: 'Nunito Sans', sans-serif;
     padding-left: 1rem;
     padding-bottom: 1rem;
 }
@@ -64,6 +65,7 @@
 
 .value-list{
     padding-right: 2rem;
+    font-family: 'Nunito Sans', sans-serif;
 }
 
 .trash{
@@ -97,7 +99,7 @@
 .filter-resume{
     font-size: 1rem;
     font-weight: 700;
-    font-family: 'Nunito';
+    font-family: 'Nunito Sans', sans-serif;
 }
 
 .filter-all{
@@ -112,6 +114,7 @@
     border-style: none;
     border-radius: 8px;
     cursor: pointer;
+    font-family: 'Inter', sans-serif;
 }
 
 .filter-all:hover{
@@ -130,6 +133,7 @@
     border-style: none;
     border-radius: 8px;
     cursor: pointer;
+    font-family: 'Inter', sans-serif;
 }
 
 .filter-input:hover{
@@ -149,6 +153,7 @@
     border-style: none;
     border-radius: 8px;
     cursor: pointer;
+    font-family: 'Inter', sans-serif;
 }
 
 .filter-expenses:hover{
@@ -157,6 +162,7 @@
 }
 
 .no-input{
+    font-family: 'Nunito Sans', sans-serif;
     font-size: 20px;
 }
 
